--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Desiree Rothrock and is
-      <a href="#" target="_blank"> open sourced on GitHub</a>.
+      This project was coded with 🖤 by Desiree Rothrock and is
+      <a href="https://github.com/rothrock5913/world-clock" target="_blank"> open sourced on GitHub</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
