--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>World Clock - Desiree Rothrock</title>
-</head>
-<body>
-    <h1>World Clock</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
+    <title>World Clock - Desiree Rothrock</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select name>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Aukland</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">August 15th 2023</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">August 15th 2023</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded with 🖤 by Desiree Rothrock and is
       <a href="https://github.com/rothrock5913/world-clock" target="_blank"> open sourced on GitHub</a>
