--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">August 15th 2023</div>
-        <div class="time">1:48:15 AM</div>
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
     </div>
     <footer>
-      This project was coded with 🖤 by Desiree Rothrock and is
+      This project was coded with 🖤  by <strong>Desiree Rothrock</strong> and is
       <a href="https://github.com/rothrock5913/world-clock" target="_blank"> open sourced on GitHub</a>
     </footer>
     <script src="javascript/index.js"></script>
