Added third location

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         </div>
         <div class="time">1:48:15 <small> AM </small></div>
       </div>
+      <div class="city">
+        <div>
+          <h2>London 🇬🇧</h2>
+          <div class="date">August 15th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
     </div>
     <footer>
       This project was coded with 🖤  by <strong>Desiree Rothrock</strong> and is
